[package]
name = "e621_downloader"
version = "1.8.0"
authors = ["McSib <mcsibsart@gmail.com>"]
edition = "2024"

[dependencies]
once_cell = "1.21.3"
base64-url = "3.0.0"
indicatif = "0.18.0"
dialoguer = "0.11.0"
console = "0.16.0"
log = "0.4.27"
simplelog = "0.12.2"
reqwest = { version = "0.12.21", features = ["blocking", "rustls-tls", "json", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"

# Hash verification dependencies
sha2 = "0.11.0-rc.0"
rayon = "1.10"
walkdir = "2.5.0"
memmap2 = "0.9.5"
num_cpus = "1.17.0"
hex = "0.4.3"

# Memory efficiency and system info
smallvec = "2.0.0-alpha.11"
sysinfo = "0.36.0"
chrono = { version = "0.4.41", features = ["serde"] }

# Performance optimization dependencies
dashmap = "5.5"
lru = "0.12"
flume = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"
