[package]
name = "e621_downloader"
version = "3.0.0"
authors = ["Furr-Tec Studios"]
edition = "2021"

[dependencies]
once_cell = "1.21.3"
base64-url = "3.0.0"
base64 = "0.21.7"
indicatif = "0.18.0"
dialoguer = "0.11.0"
console = "0.16.0"
log = "0.4.27"
simplelog = "0.12.2"
reqwest = { version = "0.12.21", features = ["blocking", "rustls-tls", "json", "gzip", "brotli", "deflate", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
thiserror = "1.0.69"
notify = "6.1.1"
anyhow = "1.0.98"
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Hash verification dependencies
sha2 = "0.11.0-rc.0"
blake3 = "1.8.2"
rayon = "1.10"
walkdir = "2.5.0"
memmap2 = "0.9.5"
num_cpus = "1.17.0"
hex = "0.4.3"
hmac-sha512 = "1.1.7"

# Memory efficiency and system info
smallvec = "2.0.0-alpha.11"
sysinfo = "0.36.0"
chrono = { version = "0.4.41", features = ["serde"] }

# Performance optimization dependencies
dashmap = "5.5.3"
lru = "0.16.0"
flume = "0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
parking_lot = "0.12.4"
regex = "1.11.1"
lazy_static = "1.5.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
web-sys = "0.3.77"
humantime = "2.1.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
urlencoding = "2.1.3"

# Test dependencies
[dev-dependencies]
tempfile = "3.13.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi"] }
